src/test/deca/context/valid/class/classes_with_asm_method_basic.deca
/// Description:
// 	  Test classes with asm body method
// Resultats:
// 	  ok
// Historique:
// 	  cree le 18/01/2023
class A {
    protected boolean x;
    void myAsmBody()
        asm("LOAD
        WORDS 
        SOMETHING R1, R2
        OTHER SOMETHING");
}

